--- a/src/App.sass
+++ b/src/App.sass
@@ -1,6 +1,6 @@
 
 body 
-  font-family: 'Amarante', cursive
+  font-family: 'Nunito', sans-serif
 
 *
   box-sizing: border-box
@@ -17,3 +17,130 @@ body
 .log:hover
   color: rgba(255,255,255,.75)
   text-decoration: none
+
+//login
+
+.login-dark
+  height: 100vh
+  background: #475d62 url('./assets/images/loginbackground.jpg')
+  background-repeat: no-repeat
+  background-size: cover
+  background-position: center
+  position: relative
+
+.login-dark form
+  max-width: 320px
+  width: 90%
+  background-color: #1e2833
+  padding: 40px
+  border-radius: 4px
+  transform: translate(-50%, -50%)
+  position: absolute
+  top: 50%
+  left: 50%
+  color: #fff
+  box-shadow: 3px 3px 4px rgba(0,0,0,0.2)
+
+.login-dark form .form-control
+  background: none
+  border: none
+  border-bottom: 1px solid #434a52
+  border-radius: 0
+  box-shadow: none
+  outline: none
+  color: inherit
+
+.login-dark form .btn-primary
+  background: #214a80
+  border: none
+  border-radius: 4px
+  padding: 11px
+  box-shadow: none
+  margin-top: 26px
+  text-shadow: none
+  outline: none
+
+.login-dark form .btn-primary:hover, .login-dark form .btn-primary:active
+  background: #214a80
+  outline: none
+
+.login-dark form .forgot
+  display: block
+  text-align: center
+  font-size: 12px
+  color: #6f7a85
+  opacity: 0.9
+  text-decoration: none
+
+.login-dark form .forgot:hover, .login-dark form .forgot:active
+  opacity: 1
+  text-decoration: none
+
+.login-dark form .btn-primary:active
+  transform: translateY(1px)
+
+//register
+.reg
+  font-size: 24px
+  line-height: 1.5
+  color: white
+  text-align: center
+
+.register-dark
+  height: 100vh
+  background: #475d62 url('./assets/images/registerovbackground.jpg')
+  background-repeat: no-repeat
+  background-size: cover
+  background-position: center
+  position: relative
+
+.register-dark form
+  max-width: 320px
+  width: 90%
+  background-color: #1e2833
+  padding: 40px
+  border-radius: 4px
+  transform: translate(-50%, -50%)
+  position: absolute
+  top: 50%
+  left: 50%
+  color: #fff
+  box-shadow: 3px 3px 4px rgba(0,0,0,0.2)
+
+.register-dark form .form-control
+  background: none
+  border: none
+  border-bottom: 1px solid #434a52
+  border-radius: 0
+  box-shadow: none
+  outline: none
+  color: inherit
+
+.register-dark form .btn-primary
+  background: #214a80
+  border: none
+  border-radius: 4px
+  padding: 11px
+  box-shadow: none
+  margin-top: 26px
+  text-shadow: none
+  outline: none
+
+.register-dark form .btn-primary:hover, .register-dark form .btn-primary:active
+  background: #214a80
+  outline: none
+
+.register-dark form .forgot
+  display: block
+  text-align: center
+  font-size: 12px
+  color: #6f7a85
+  opacity: 0.9
+  text-decoration: none
+
+.register-dark form .forgot:hover, .register-dark form .forgot:active
+  opacity: 1
+  text-decoration: none
+
+.register-dark form .btn-primary:active
+  transform: translateY(1px)
