--- a/src/App.sass
+++ b/src/App.sass
@@ -150,12 +150,16 @@ body
 
 label
   display: block
+  font-size: 1rem
 
 .xlab
   opacity: 100%
 
 .notes 
   background-attachment: local
-  background-image: linear-gradient(to right, white 10px, transparent 10px), linear-gradient(to left, white 10px, transparent 10px), repeating-linear-gradient(white, white 30px, #ccc 30px, #ccc 31px, white 31px)
-  line-height: 31px
-  padding: 8px 10px
+  background-image: linear-gradient(to right, white 10px, transparent 10px), linear-gradient(to left, white 10px, transparent 10px), repeating-linear-gradient(white, white 24px, #ccc 24px, #ccc 25px, white 25px)
+  line-height: 24px
+  padding: 6px 12px
+
+.charSheet .form-row .form-control
+  font-size: 1rem
